--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 * {
   box-sizing: border-box;
@@ -61,45 +62,46 @@ nav {
   img {
     width: 40px;
   }
-  .burger-menu {
+  #burger-menu {
     width: 40px;
     z-index: 10;
-    span {
-      border-radius: 2px;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;    
+    transform: rotateY(180deg);
+    span { 
       display: block;
       height: 4px;
+      width: fit-content;
       background-color: black;
+      transform-origin: right;
       margin-left: auto;
       transition: all 400ms ease-in;
-      transform-origin: right;
     }
     :nth-child(1) {
       margin-bottom: 8px;
+      width: 40px;
     }
     :nth-child(2) {
       margin-bottom: 8px;
       width: 35px;
     }
-    :nth-child(3) {
-      margin-top: 8px;
+    :nth-child(3) { 
       width: 30px;
     }
   }
-  .nav-itoms-desktop {
-    position: absolute;
-    right: 0px;
-    opacity: 0;
+  .nav-itoms-desktop { 
+    position: relative;
+    top: -100px;
     transition: all 400ms ease-in;
     a {
       text-decoration: none;
-      position: absolute;
       font-family: $secondary-font;
       font-weight: bold;
-      font-size: 20px;
+      font-size: 22px;
+      position: relative;
       color: black;
-      padding: 0 5px;
-      right: -10px;
-      top: 0;
+      padding: 0 10px;
       transition: all 400ms ease-in;
     }
     a::before {
@@ -451,7 +453,7 @@ $font-fade-color: #9c9caf;
 $form-color: #f2f2f2;
 $shadow: 0 0 20px 0 #d9d6ed;
 #contact-nav {
-  padding: 30px 0;
+  padding: 20px 0;
   .container {
     display: flex;
     justify-content: space-between;
@@ -1052,16 +1054,17 @@ $shadow: 0 0 20px 0 #d9d6ed;
     } 
     .nav-itoms-mob {
       display: flex;
-      width: 70vw;
+      width: 95vw;
       flex-direction: column;
-      align-items: left;
-      position: absolute; 
+      align-items: center;
+      position: fixed; 
       left: -90vw;
-      top: -20px;
+      transform: translateX(-50%);
+      top: 70px;
       z-index: -2;
       background-color: $violet;
-      padding: 100px 0px 90px 30px;
-      border-radius: 0 0 10px 0;
+      padding: 50px 0px 50px 0;
+      border-radius:10px;
       opacity: 1;
       transition: all 400ms ease-in;
       a {
@@ -1075,11 +1078,7 @@ $shadow: 0 0 20px 0 #d9d6ed;
     }
   }
   /* styling for header */
-  header {
-    .download-but {
-      padding: 15px 60px !important;
-    }
-  }
+   
   /* styling for category */
   #categories {
     .container {
@@ -1136,6 +1135,11 @@ $shadow: 0 0 20px 0 #d9d6ed;
     .container {
       flex-direction: column-reverse;
     }
+    .logo-sec{
+      h3{
+        font-size: 18px !important;
+      }
+    }
     .footer-buttons {
       .footer-icons{
         text-align: center;
@@ -1145,10 +1149,7 @@ $shadow: 0 0 20px 0 #d9d6ed;
             margin: 20px 10px;
           }
         }
-      }
-      .contact {
-        padding: 15px 50px !important;
-      }
+      } 
     }
   }
 
@@ -1173,6 +1174,69 @@ $shadow: 0 0 20px 0 #d9d6ed;
   /* styling for works */
   #ui-works {
     grid-template-columns: auto auto !important;
+  }
+  #development {
+    padding-top: 70px;
+    display: grid;
+    gap: 10px;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    a {
+      box-shadow: $shadow;
+      width: 100%;
+      img {
+        width: 100%;
+        object-fit: cover;
+        object-position: top;
+      }
+    }
+    a:nth-child(1) {
+      grid-column: 1 / 9;
+      img {
+        height: 300px;
+      }
+    }
+    a:nth-child(2) {
+      grid-column: 1 / 9;
+      img {
+        height: 300px;
+      }
+    }
+    a:nth-child(3) {
+      grid-column: 1 / 9;
+      img {
+        height: 300px;
+      }
+    }
+    a:nth-child(4) {
+      grid-column: 1 / 9;
+      img {
+        height: 300px;
+      }
+    }
+    a:nth-child(5) {
+      grid-column: 1 / 5;
+      img {
+        height: 200px;
+      }
+    }
+    a:nth-child(6) {
+      grid-column: 5 / 9;
+      img {
+        height: 200px;
+      }
+    }
+    a:nth-child(7) {
+      grid-column: 1 / 5;
+      img {
+        height: 200px;
+      }
+    }
+    a:nth-child(8) {
+      grid-column: 5 / 9;
+      img {
+        height: 200px;
+      }
+    }
   }
   #works {
     padding-top: 20px;
